[build-system]
requires = ["setuptools", "pandas", "numpy", "matplotlib"]
build-backend = "setuptools.build_meta"

[project]
name = "toopy"
version = "0.2.0"
authors = [
  { name="Florian Schunck", email="fluncki@protonmail.com" },
]
description = "Tools for python"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/flo-schu/toopy"
"Issue Tracker" = "https://github.com/flo-schu/toopy/issues"

[project.scripts]
toopy-nutrient-timer = "toopy:nutrient_timers"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["toopy", "tests"]  # ["."] by default
exclude = []  # empty by default
namespaces = true  # true by default